# Gemmarndakel

./: .gitignore  Gemmarndakel.bat  Gemmarndakel.lnk  README.md  app_initializer.py  audio_player.py  audio_recorder.py  bible_verses.py  config.json  create_shortcut.ps1  fortune_service.py  gui.py  legend_generator.py  main.py  oracle_client.py  persona.py  prompt-test.cmd  prompt_loader.py  prompt_test.py  pyproject.toml  settings.py  splash.py  tarot_cards.py  test.cmd  test.py  transcriber.py
